--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "emoji-picker-react": "^4.5.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -28,7 +29,12 @@
   },
   "babel": {
     "presets": [
-      ["@babel/preset-env", { "modules": "commonjs" }],
+      [
+        "@babel/preset-env",
+        {
+          "modules": "commonjs"
+        }
+      ],
       "@babel/preset-react"
     ]
   },
@@ -51,5 +57,4 @@
     "@babel/preset-react": "^7.23.3",
     "babel-jest": "^29.7.0"
   }
-  
 }
