--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "emoji-picker-react": "^4.5.15",
+    "msw": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -18,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --config=babel.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,16 +28,8 @@
       "react-app/jest"
     ]
   },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "modules": "commonjs"
-        }
-      ],
-      "@babel/preset-react"
-    ]
+  "jest": {
+    "config": "jest.config.js"
   },
   "browserslist": {
     "production": [
@@ -55,6 +48,10 @@
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
-    "babel-jest": "^29.7.0"
+    "babel-jest": "^29.7.0",
+    "esbuild": "^0.19.5",
+    "esbuild-jest": "^0.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0"
   }
 }
