--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5001",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.1",
-    "emoji-picker-react": "^4.5.15",
-    "msw": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -19,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "NODE_ENV=test jest --config=babel.config.js",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,9 +22,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "jest": {
-    "config": "jest.config.js"
   },
   "browserslist": {
     "production": [
@@ -42,16 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/plugin-syntax-jsx": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-react": "^7.23.3",
-    "babel-jest": "^29.7.0",
-    "esbuild": "^0.19.5",
-    "esbuild-jest": "^0.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0"
   }
 }
