--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "axios": "^0.24.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
